<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:background="@drawable/hometopbar">

        <View
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="168dp"
            android:layout_marginLeft="168dp"
            android:layout_marginBottom="144dp"
            android:background="@drawable/bulat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/option" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="88dp"
            android:background="@drawable/pencarian"
            android:drawableEnd="@drawable/ic_baseline_search_24"
            android:drawableRight="@drawable/ic_baseline_search_24"
            android:hint="@string/cari_tempat"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/whitedark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/option"
            android:layout_width="53dp"
            android:layout_height="36dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/ic_baseline_drag_handle_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="84dp"
            android:text="Discover Tanjungsari"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/sambut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="40dp"
            android:text="Mau kemana hari ini ipur?"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/area" />


        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="240dp"
            android:layout_marginLeft="240dp"
            android:layout_marginBottom="208dp"
            android:src="@drawable/ipur"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/option" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-50dp"
        android:background="@drawable/homecard">

        <TextView
            android:id="@+id/kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/kategori"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/listkategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:columnCount="3"
            android:rowCount="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kategori">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/bulat2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/mountains"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gunung"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_marginStart="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/imageViewkuliner"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/bulat2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/restaurant"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewkuliner"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewkuliner"
                    app:layout_constraintStart_toStartOf="@+id/imageViewkuliner"
                    app:layout_constraintTop_toTopOf="@+id/imageViewkuliner" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kuliner"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewkuliner" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewtaman"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/bulat2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/field"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewtaman"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewtaman"
                    app:layout_constraintStart_toStartOf="@+id/imageViewtaman"
                    app:layout_constraintTop_toTopOf="@+id/imageViewtaman" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taman"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewtaman" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </GridLayout>

        <TextView
            android:id="@+id/rekomendasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Rekomendasi dari Kami !"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/kategori"
            app:layout_constraintTop_toBottomOf="@id/listkategori" />

        <TextView
            android:id="@+id/rekomdasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="lihat semua"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/rekomendasi"
            app:layout_constraintTop_toBottomOf="@+id/listkategori" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>